examples/test/testpolicy11692.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11692
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key15: value43
      key29: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value24
          key46: value44
          key15: value18
      podSelector:
        matchLabels:
          key25: value18
